# metadata_eraser

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_ja.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  Dockerfile  LICENSE  LICENSE_ja.md  README.md  README_ja.md  pyproject.toml
.kiro/specs/metadata-eraser/: design.md  requirements.md  tasks.md
.kiro/steering/: deploy.md  product.md  structure.md  tech.md
app/: __init__.py
app/models/: responses.py
app/processors/: base.py  image.py  office.py  pdf.py
app/routes/: download.py  upload.py
app/services/: download.py  file_storage.py  metadata.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  upload.html
app/utils/: security.py  validation.py
tests/integration/: test_app.py
tests/unit/: test_validation.py
